--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-        #          show_sql: true
-        format_sql: true
+        default_batch_fetch_size: 100
 
+        format_sql: true
 logging:
   level:
     org.hibernate.SQL: debug
